<package>
  <name>actionlib</name>
  <version>1.11.5</version>
  <description>
    The actionlib stack provides a standardized interface for
    interfacing with preemptable tasks. Examples of this include moving
    the base to a target location, performing a laser scan and returning
    the resulting point cloud, detecting the handle of a door, etc.
  </description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/actionlib</url>
  <url type="bugtracker">https://github.com/ros/actionlib/issues</url>
  <url type="repository">https://github.com/ros/actionlib</url>
  <author>Eitan Marder-Eppstein</author>
  <author>Vijay Pradeep</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rosnode</test_depend>
</package>
