<package>
  <name>dynamic_reconfigure</name>
  <version>1.5.48</version>
  <description>
    This unary stack contains the dynamic_reconfigure package which provides a means to change
    node parameters at any time without having to restart the node.
  </description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dynamic_reconfigure</url>
  <url type="bugtracker">https://github.com/ros/dynamic_reconfigure/issues</url>
  <url type="repository">https://github.com/ros/dynamic_reconfigure</url>
  <author>Blaise Gassend</author>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

  <buildtool_depend version_gte="0.5.87">catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosservice</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
