<?xml version="1.0"?>
<package>
  <name>genlisp</name>
  <version>0.4.15</version>
  <description>
  Common-Lisp ROS message and service generators.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/roslisp</url>
  <author email="bhaskara@willowgarage.com">Bhaskara Marti</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>

  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>lisp</message_generator>
  </export>
</package>
