<?xml version="1.0"?>
<package>
  <name>message_generation</name>
  <version>0.2.10</version>
  <description>Package modeling the build-time dependencies for generating language bindings of messages.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/message_generation</url>
  <url type="bugtracker">https://github.com/ros/message_generation/issues</url>
  <url type="repository">https://github.com/ros/message_generation</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gencpp</run_depend>
  <run_depend>genlisp</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>genpy</run_depend>
</package>
